--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseUrl = "https://davidnix.github.io"
+baseUrl = "https://davidnix.github.io/"
 languageCode = "en-us"
 title = "Serial Startup Engineer, Golang and iOS"
 theme = "hugo-steam-theme"
