--- a/config.toml
+++ b/config.toml
@@ -19,11 +19,12 @@ canonifyurls = true
 	# To provide some metadata for search engines and the about section in the footer
 	# feel free to add a few information about you and your website.
 	name = "David Nix"
-	bio = "I'm just a theme. That's it. If you like my design clone [me](//github.com/digitalcraftsman/hugo-steam-theme) from Github. Thanks."
+	bio = "I'm a computer."
 	description = "Your description of the blog"
-	location = "" # optional
+	location = "Denver, CO" # optional
 	twitter = "@davidnix_" # optional
 	github = "DavidNix" # optional
+	linkedin = "nixdavid" # optional
 
 	# Enable a comment system
 	# You can choose between Disqus or Google Plus by setting comments
