--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseUrl = "https://davidnix.github.io/"
+baseUrl = "https://davidnix.io/"
 languageCode = "en-us"
-title = "Nix Blog - Tutorials, Opinions, Rants"
+title = "David Nix's Blog - Tutorials, Opinions, Rants"
 disqusShortname = "davidnix"
 paginate = 10
 canonifyurls = true
@@ -8,7 +8,7 @@ canonifyurls = true
 [params]
 
 	title = "David Nix"
-	subtitle = "Startup Software Developer, Golang and iOS"
+	subtitle = "Startup Software Developer, Go and iOS"
 	copyright = ""
 
 	# You can choose between green, orange, red and blue.
@@ -17,7 +17,7 @@ canonifyurls = true
 	# To provide some metadata for search engines and the about section in the footer
 	# feel free to add a few information about you and your website.
 	name = "David Nix"
-	bio = "I love code and startups. Programming is hard. Let's make it a little easier."
+	bio = "I love code and startups."
 	description = "David Nix's Blog"
 	location = "Denver, CO" # optional
 	twitter = "@davidnix_" # optional
