configure for netlify

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseUrl = "https://davidnix.github.io/"
+baseUrl = "https://davidnix.io/"
 languageCode = "en-us"
 title = "David Nix's Blog - Tutorials, Opinions, Rants"
 disqusShortname = "davidnix"
