--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ canonifyurls = true
 	# To provide some metadata for search engines and the about section in the footer
 	# feel free to add a few information about you and your website.
 	name = "David Nix"
-	bio = "iOS developer since 2010. Backend web developer since 2012. I love code and startups."
+	bio = "iOS developer since 2010. Backend web developer since 2012. For new posts, follow me on [twitter](https://twitter.com/@davidnix_) or subscribe to the RSS feed."
 	description = "David Nix's Blog"
 	location = "Denver, CO" # optional
 	twitter = "@davidnix_" # optional
